Fix footer weirdness ... again
Commit d5842db8ffa56dc2cadd11744f78ba44d20229c6 (Fix flash messages
appearing underneath footer) seems to have been mysteriously reverted.
This re-applies the change, meant to fix flash messages appearing at a
lower z-index than the footer and the invisible bottom of #above_footer
extending over the footer, rendering its links tragically unclickable.

--- a/webroot/css/datacenter.less
+++ b/webroot/css/datacenter.less
@@ -562,8 +562,6 @@ body,
 #above_footer {
     height: auto;
     min-height: 100%;
-    position: relative;
-    z-index: 3;
 }
 #content_wrapper {
     padding-bottom: 240px;
